--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <script src="./js/script.js" defer></script>
     <title>Travel</title>
 </head>
 
 <body>
+
     <header class="header">
 
         <a href="#" class="logo"> <i class="fas fa-hiking"></i> travel. </a>
@@ -33,7 +35,66 @@
 
     </header>
 
+    <div class="search-form">
 
+        <div id="close-search" class="fas fa-times"></div>
+
+        <form action="">
+            <input type="text" name="" placeholder="Busca" id="search-box" />
+            <label for="search-box" class="fas fa-search"></label>
+        </form>
+    </div>
+
+    <section class="home" id="home">
+
+        <div class="home-slider">
+
+            <div class="wrapper">
+
+                <div class="slide">
+                    <div class="box" style="background:url(images/home-bg-1.jpg) no-repeat">
+                        <div class="content">
+                            <span>nunca para de</span>
+                            <h3>explorar</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                                ut labore et dolore magna aliqua.
+                            </p>
+                            <a href="#" class="btn">get started</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="slide">
+                    <div class="box second" style="background:url(images/home-bg-2.jpg) no-repeat">
+                        <div class="content">
+                            <span>make tour</span>
+                            <h3>amazing</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                                ut labore et dolore magna aliqua.
+                            </p>
+                            <a href="#" class="btn">get started</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="slide">
+                    <div class="box" style="background:url(images/home-bg-3.jpg) no-repeat">
+                        <div class="content">
+                            <span>explore the</span>
+                            <h3>new world</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                                ut labore et dolore magna aliqua.
+                            </p>
+                            <a href="#" class="btn">get started</a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
 
 </body>
 
