--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -67,8 +67,8 @@
                 <div class="slide">
                     <div class="box second" style="background:url(images/home-bg-2.jpg) no-repeat">
                         <div class="content">
-                            <span>make tour</span>
-                            <h3>amazing</h3>
+                            <span>Faça um tour</span>
+                            <h3>incrível</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                                 ut labore et dolore magna aliqua.
                             </p>
@@ -80,8 +80,8 @@
                 <div class="slide">
                     <div class="box" style="background:url(images/home-bg-3.jpg) no-repeat">
                         <div class="content">
-                            <span>explore the</span>
-                            <h3>new world</h3>
+                            <span>explore um</span>
+                            <h3>novo mundo</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                                 ut labore et dolore magna aliqua.
                             </p>
