--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <script src="./js/script.js" defer></script>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
+
     <title>Travel</title>
 </head>
 
 <body>
-
     <header class="header">
-
         <a href="#" class="logo"> <i class="fas fa-hiking"></i> travel. </a>
-
         <nav class="navbar">
             <div id="nav-close" class="fas fa-times"></div>
             <a href="#home">home</a>
@@ -26,19 +26,15 @@
             <a href="#reviews">reviews</a>
             <a href="#blogs">blogs</a>
         </nav>
-
         <div class="icons">
             <div id="menu-btn" class="fas fa-bars"></div>
             <a href="#" class="fas fa-shopping-cart"></a>
             <div id="search-btn" class="fas fa-search"></div>
         </div>
-
     </header>
 
     <div class="search-form">
-
         <div id="close-search" class="fas fa-times"></div>
-
         <form action="">
             <input type="text" name="" placeholder="Busca" id="search-box" />
             <label for="search-box" class="fas fa-search"></label>
@@ -46,12 +42,10 @@
     </div>
 
     <section class="home" id="home">
+        <div class="swiper home-slider">
+            <div class="swiper-wrapper">
 
-        <div class="home-slider">
-
-            <div class="wrapper">
-
-                <div class="slide">
+                <div class="swiper-slide">
                     <div class="box" style="background:url(images/home-bg-1.jpg) no-repeat">
                         <div class="content">
                             <span>nunca para de</span>
@@ -64,7 +58,7 @@
                     </div>
                 </div>
 
-                <div class="slide">
+                <div class="swiper-slide">
                     <div class="box second" style="background:url(images/home-bg-2.jpg) no-repeat">
                         <div class="content">
                             <span>Faça um tour</span>
@@ -77,7 +71,7 @@
                     </div>
                 </div>
 
-                <div class="slide">
+                <div class="swiper-slide">
                     <div class="box" style="background:url(images/home-bg-3.jpg) no-repeat">
                         <div class="content">
                             <span>explore um</span>
@@ -91,10 +85,13 @@
                 </div>
 
             </div>
-
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
         </div>
-
     </section>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+
 
 </body>
 
