--- a/index.html
+++ b/index.html
@@ -92,6 +92,43 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 
+    <section class="category">
+
+        <h1 class="heading">Aventuras radicais</h1>
+
+        <div class="box-container">
+
+            <div class="box">
+                <img src="images/category-1.jpg" alt=""/>
+                <h3>bungee jump</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipiscing elit. Laborum, id.</p>
+                <a href="#" class="btn">Saiba mais</a>
+            </div>
+
+            <div class="box">
+                <img src="images/category-2.jpg" alt=""/>
+                <h3>Tirolesa</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipiscing elit. Laborum, id.</p>
+                <a href="#" class="btn">Saiba mais</a>
+            </div>
+
+            <div class="box">
+                <img src="images/category-3.jpg" alt=""/>
+                <h3>canoagem</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipiscing elit. Laborum, id.</p>
+                <a href="#" class="btn">Saiba mais</a>
+            </div>
+
+            <div class="box">
+                <img src="images/category-4.jpg" alt=""/>
+                <h3>caiaque</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipiscing elit. Laborum, id.</p>
+                <a href="#" class="btn">Saiba mais</a>
+            </div>
+
+        </div>
+
+    </section>
 
 </body>
 
