--- a/index.html
+++ b/index.html
@@ -97,28 +97,28 @@
         <div class="box-container">
 
             <div class="box">
-                <img src="images/category-1.jpg" alt=""/>
+                <img src="images/category-1.jpg" alt="" />
                 <h3>bungee jump</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipiscing elit. Laborum, id.</p>
                 <a href="#" class="btn">Saiba mais</a>
             </div>
 
             <div class="box">
-                <img src="images/category-2.jpg" alt=""/>
+                <img src="images/category-2.jpg" alt="" />
                 <h3>Tirolesa</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipiscing elit. Laborum, id.</p>
                 <a href="#" class="btn">Saiba mais</a>
             </div>
 
             <div class="box">
-                <img src="images/category-3.jpg" alt=""/>
+                <img src="images/category-3.jpg" alt="" />
                 <h3>canoagem</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipiscing elit. Laborum, id.</p>
                 <a href="#" class="btn">Saiba mais</a>
             </div>
 
             <div class="box">
-                <img src="images/category-4.jpg" alt=""/>
+                <img src="images/category-4.jpg" alt="" />
                 <h3>caiaque</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipiscing elit. Laborum, id.</p>
                 <a href="#" class="btn">Saiba mais</a>
@@ -128,8 +128,27 @@
 
     </section>
 
+    <section class="about" id="about">
+
+        <div class="image">
+            <img src="images/about-img.jpg" alt="" />
+        </div>
+
+        <div class="content">
+            <h3>memorable outdoor experiences</h3>
+            <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam consequuntur, incidunt alias
+                explicabo
+                fuga tempore voluptate ipsa corrupti eveniet autem, numquam quod vitae ex dicta quasi.
+                Quibusdam cumque modi ab.</p>
+            <p>explicabo fuga tempore voluptate ipsa corrupti eveniet autem, numquam quod vitae ex dicta quasi.
+                Quibusdam cumque modi ab</p>
+            <a href="#" class="btn"></a>
+        </div>
+
+    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-    
+
 </body>
 
 </html>
