shop in progress

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="search-form">
         <div id="close-search" class="fas fa-times"></div>
         <form action="">
-            <input type="text" name="" placeholder="Busca" id="search-box" />
+            <input type="text" name="" placeholder="Buscar" id="search-box" />
             <label for="search-box" class="fas fa-search"></label>
         </form>
     </div>
@@ -53,7 +53,7 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                                 ut labore et dolore magna aliqua.
                             </p>
-                            <a href="#" class="btn">get started</a>
+                            <a href="#" class="btn">Saiba mais</a>
                         </div>
                     </div>
                 </div>
@@ -66,7 +66,7 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                                 ut labore et dolore magna aliqua.
                             </p>
-                            <a href="#" class="btn">get started</a>
+                            <a href="#" class="btn">Saiba mais</a>
                         </div>
                     </div>
                 </div>
@@ -79,7 +79,7 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                                 ut labore et dolore magna aliqua.
                             </p>
-                            <a href="#" class="btn">get started</a>
+                            <a href="#" class="btn">Saiba mais</a>
                         </div>
                     </div>
                 </div>
@@ -128,23 +128,165 @@
 
     </section>
 
-    <section class="about" id="about">
+    <section class="about" id="sobre">
 
         <div class="image">
             <img src="images/about-img.jpg" alt="" />
         </div>
 
         <div class="content">
-            <h3>memorable outdoor experiences</h3>
+            <h3>viva experiencias inesquecíveis</h3>
             <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam consequuntur, incidunt alias
                 explicabo
                 fuga tempore voluptate ipsa corrupti eveniet autem, numquam quod vitae ex dicta quasi.
                 Quibusdam cumque modi ab.</p>
             <p>explicabo fuga tempore voluptate ipsa corrupti eveniet autem, numquam quod vitae ex dicta quasi.
                 Quibusdam cumque modi ab</p>
-            <a href="#" class="btn"></a>
+            <a href="#" class="btn">Saiba mais</a>
         </div>
 
+    </section>
+
+    <section class="shop" id="loja">
+        <h1 class="heading"></h1>
+        <div class="product-slider">
+            <div class="wrapper">
+
+                <div class="slide">
+                    <div class="image">
+                        <img src="images/product-1.jpg" alt="" />
+                        <div class="icons">
+                            <a href="#" class="fas fa-shopping-cart"></a>
+                            <a href="#" class="fas fa-eye"></a>
+                            <a href="#" class="fas fa-share"></a>
+                        </div>
+                    </div>
+                    <div class="content">
+                        <h3>survival kits</h3>
+                        <div class="price"> R$5.00 - R$25.00 </div>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="slide">
+                    <div class="image">
+                        <img src="images/product-2.jpg" alt="" />
+                        <div class="icons">
+                            <a href="#" class="fas fa-shopping-cart"></a>
+                            <a href="#" class="fas fa-eye"></a>
+                            <a href="#" class="fas fa-share"></a>
+                        </div>
+                    </div>
+                    <div class="content">
+                        <h3>survival kits</h3>
+                        <div class="price"> R$5.00 - R$25.00 </div>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="slide">
+                    <div class="image">
+                        <img src="images/product-3.jpg" alt="" />
+                        <div class="icons">
+                            <a href="#" class="fas fa-shopping-cart"></a>
+                            <a href="#" class="fas fa-eye"></a>
+                            <a href="#" class="fas fa-share"></a>
+                        </div>
+                    </div>
+                    <div class="content">
+                        <h3>survival kits</h3>
+                        <div class="price"> R$5.00 - R$25.00 </div>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                    </div>
+                </div>
+
+                
+                <div class="slide">
+                    <div class="image">
+                        <img src="images/product-4.jpg" alt="" />
+                        <div class="icons">
+                            <a href="#" class="fas fa-shopping-cart"></a>
+                            <a href="#" class="fas fa-eye"></a>
+                            <a href="#" class="fas fa-share"></a>
+                        </div>
+                    </div>
+                    <div class="content">
+                        <h3>survival kits</h3>
+                        <div class="price"> R$5.00 - R$25.00 </div>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="slide">
+                    <div class="image">
+                        <img src="images/product-5.jpg" alt="" />
+                        <div class="icons">
+                            <a href="#" class="fas fa-shopping-cart"></a>
+                            <a href="#" class="fas fa-eye"></a>
+                            <a href="#" class="fas fa-share"></a>
+                        </div>
+                    </div>
+                    <div class="content">
+                        <h3>survival kits</h3>
+                        <div class="price"> R$5.00 - R$25.00 </div>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="slide">
+                    <div class="image">
+                        <img src="images/product-6.jpg" alt="" />
+                        <div class="icons">
+                            <a href="#" class="fas fa-shopping-cart"></a>
+                            <a href="#" class="fas fa-eye"></a>
+                            <a href="#" class="fas fa-share"></a>
+                        </div>
+                    </div>
+                    <div class="content">
+                        <h3>survival kits</h3>
+                        <div class="price"> R$5.00 - R$25.00 </div>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
