--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
 
     <section class="shop" id="loja">
         <h1 class="heading"></h1>
-        <div class="product-slider">
-            <div class="wrapper">
+        <div class="swiper product-slider">
+            <div class="swiper-wrapper">
 
-                <div class="slide">
+                <div class="swiper-slide">
                     <div class="image">
                         <img src="images/product-1.jpg" alt="" />
                         <div class="icons">
@@ -174,7 +174,7 @@
                     </div>
                 </div>
 
-                <div class="slide">
+                <div class="swiper-slide">
                     <div class="image">
                         <img src="images/product-2.jpg" alt="" />
                         <div class="icons">
@@ -196,7 +196,7 @@
                     </div>
                 </div>
 
-                <div class="slide">
+                <div class="swiper-slide">
                     <div class="image">
                         <img src="images/product-3.jpg" alt="" />
                         <div class="icons">
@@ -219,7 +219,7 @@
                 </div>
 
                 
-                <div class="slide">
+                <div class="swiper-slide">
                     <div class="image">
                         <img src="images/product-4.jpg" alt="" />
                         <div class="icons">
@@ -241,7 +241,7 @@
                     </div>
                 </div>
 
-                <div class="slide">
+                <div class="swiper-slide">
                     <div class="image">
                         <img src="images/product-5.jpg" alt="" />
                         <div class="icons">
@@ -263,7 +263,7 @@
                     </div>
                 </div>
 
-                <div class="slide">
+                <div class="swiper-slide">
                     <div class="image">
                         <img src="images/product-6.jpg" alt="" />
                         <div class="icons">
