--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
+
     <title>Travel</title>
 </head>
 
@@ -148,7 +150,8 @@
     </section>
 
     <section class="shop" id="loja">
-        <h1 class="heading"></h1>
+        <h1 class="heading">produtos em destaque</h1>
+
         <div class="swiper product-slider">
             <div class="swiper-wrapper">
 
@@ -218,7 +221,6 @@
                     </div>
                 </div>
 
-                
                 <div class="swiper-slide">
                     <div class="image">
                         <img src="images/product-4.jpg" alt="" />
@@ -285,11 +287,19 @@
                     </div>
                 </div>
 
+
             </div>
+
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+
         </div>
+        </div>
+
+
     </section>
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 
 </body>
 
