--- a/index.html
+++ b/index.html
@@ -299,6 +299,103 @@
 
     </section>
 
+    <section class="packages" id="pacotes">
+
+        <h1 class="heading">pacotes populares</h1>
+
+        <div class="box-container">
+
+            <div class="box">
+                <div class="image">
+                    <img src="images/img-1.jpg" alt=""/>
+                </div>
+                <div class="content">
+                    <h3>featured tour packages</h3>
+                    <p>lorem ipsum dolor sit, amet consectetur adipiscing elit. Naquam, eos.</p>
+                    <div class="price">$250 - $450</div>
+                    <a href="#" class="btn">explore now</a>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="image">
+                    <img src="images/img-2.jpg" alt=""/>
+                </div>
+                <div class="content">
+                    <h3>featured tour packages</h3>
+                    <p>lorem ipsum dolor sit, amet consectetur adipiscing elit. Naquam, eos.</p>
+                    <div class="price">$250 - $450</div>
+                    <a href="#" class="btn">explore now</a>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="image">
+                    <img src="images/img-3.jpg" alt=""/>
+                </div>
+                <div class="content">
+                    <h3>featured tour packages</h3>
+                    <p>lorem ipsum dolor sit, amet consectetur adipiscing elit. Naquam, eos.</p>
+                    <div class="price">$250 - $450</div>
+                    <a href="#" class="btn">explore now</a>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="image">
+                    <img src="images/img-4.jpg" alt=""/>
+                </div>
+                <div class="content">
+                    <h3>featured tour packages</h3>
+                    <p>lorem ipsum dolor sit, amet consectetur adipiscing elit. Naquam, eos.</p>
+                    <div class="price">$250 - $450</div>
+                    <a href="#" class="btn">explore now</a>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="image">
+                    <img src="images/img-5.jpg" alt=""/>
+                </div>
+                <div class="content">
+                    <h3>featured tour packages</h3>
+                    <p>lorem ipsum dolor sit, amet consectetur adipiscing elit. Naquam, eos.</p>
+                    <div class="price">$250 - $450</div>
+                    <a href="#" class="btn">explore now</a>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="image">
+                    <img src="images/img-6.jpg" alt=""/>
+                </div>
+                <div class="content">
+                    <h3>featured tour packages</h3>
+                    <p>lorem ipsum dolor sit, amet consectetur adipiscing elit. Naquam, eos.</p>
+                    <div class="price">$250 - $450</div>
+                    <a href="#" class="btn">explore now</a>
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+
+    <section class="services">
+
+        <h1 class="heading">Servicos</h1>
+
+        <div class="box-container">
+            <div class="box">
+                <img src="images/serv-1.png" alt="">
+                <h3>complete guide</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, in enim.</p>
+                <a href="#" class="btn">read more</a>
+            </div>
+        </div>
+
+    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 
 </body>
