--- a/index.html
+++ b/index.html
@@ -392,6 +392,42 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, in enim.</p>
                 <a href="#" class="btn">read more</a>
             </div>
+
+            <div class="box">
+                <img src="images/serv-2.png" alt="">
+                <h3>complete guide</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, in enim.</p>
+                <a href="#" class="btn">read more</a>
+            </div>
+
+            <div class="box">
+                <img src="images/serv-3.png" alt="">
+                <h3>complete guide</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, in enim.</p>
+                <a href="#" class="btn">read more</a>
+            </div>
+
+            <div class="box">
+                <img src="images/serv-4.png" alt="">
+                <h3>complete guide</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, in enim.</p>
+                <a href="#" class="btn">read more</a>
+            </div>
+
+            <div class="box">
+                <img src="images/serv-5.png" alt="">
+                <h3>complete guide</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, in enim.</p>
+                <a href="#" class="btn">read more</a>
+            </div>
+
+            <div class="box">
+                <img src="images/serv-6.png" alt="">
+                <h3>complete guide</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, in enim.</p>
+                <a href="#" class="btn">read more</a>
+            </div>
+
         </div>
 
     </section>
