--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a href="#sobre">sobre</a>
             <a href="#loja">loja</a>
             <a href="#pacotes">pacotes</a>
-            <a href="#reviews">reviews</a>
+            <a href="#reviews">avaliações</a>
             <a href="#blogs">blogs</a>
         </nav>
         <div class="icons">
@@ -94,7 +94,7 @@
 
     <section class="category">
 
-        <h1 class="heading">Aventuras radicais</h1>
+        <h1 class="heading">aventuras radicais</h1>
 
         <div class="box-container">
 
@@ -307,7 +307,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="images/img-1.jpg" alt=""/>
+                    <img src="images/img-1.jpg" alt="" />
                 </div>
                 <div class="content">
                     <h3>featured tour packages</h3>
@@ -319,7 +319,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="images/img-2.jpg" alt=""/>
+                    <img src="images/img-2.jpg" alt="" />
                 </div>
                 <div class="content">
                     <h3>featured tour packages</h3>
@@ -331,7 +331,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="images/img-3.jpg" alt=""/>
+                    <img src="images/img-3.jpg" alt="" />
                 </div>
                 <div class="content">
                     <h3>featured tour packages</h3>
@@ -343,7 +343,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="images/img-4.jpg" alt=""/>
+                    <img src="images/img-4.jpg" alt="" />
                 </div>
                 <div class="content">
                     <h3>featured tour packages</h3>
@@ -355,7 +355,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="images/img-5.jpg" alt=""/>
+                    <img src="images/img-5.jpg" alt="" />
                 </div>
                 <div class="content">
                     <h3>featured tour packages</h3>
@@ -367,7 +367,7 @@
 
             <div class="box">
                 <div class="image">
-                    <img src="images/img-6.jpg" alt=""/>
+                    <img src="images/img-6.jpg" alt="" />
                 </div>
                 <div class="content">
                     <h3>featured tour packages</h3>
@@ -381,9 +381,101 @@
 
     </section>
 
+    <section class="reviews" id="reviews">
+
+        <h1 class="heading">avaliações</h1>
+
+        <div class="swiper reviews-slider">
+            <div class="swiper-wrapper">
+
+                <div class="slide swiper-slide">
+                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                        ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
+                    <div class="user">
+                        <img src="images/pic-1.png" alt="" />
+                        <div class="info">
+                            <h3>john deo</h3>
+                            <span>designer</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="slide swiper-slide">
+                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                        ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
+                    <div class="user">
+                        <img src="images/pic-2.png" alt="" />
+                        <div class="info">
+                            <h3>john deo</h3>
+                            <span>designer</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="slide swiper-slide">
+                    <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                        ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.
+                    </div>
+                    <div class="user">
+                        <img src="images/pic-3.png" alt="" />
+                        <div class="info">
+                            <h3>john deo</h3>
+                            <span>designer</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="slide swiper-slide">
+                    <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                        ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</div>
+                    <div class="user">
+                        <img src="images/pic-4.png" alt="" />
+                        <div class="info">
+                            <h3>john deo</h3>
+                            <span>designer</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="slide swiper-slide">
+                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                        ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
+                    <div class="user">
+                        <img src="images/pic-5.png" alt="" />
+                        <div class="info">
+                            <h3>john deo</h3>
+                            <span>designer</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="slide swiper-slide">
+                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                        ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
+                    <div class="user">
+                        <img src="images/pic-6.png" alt="" />
+                        <div class="info">
+                            <h3>john deo</h3>
+                            <span>designer</span>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+
+    </section>
+
     <section class="services">
 
-        <h1 class="heading">Servicos</h1>
+        <h1 class="heading">nossos serviços</h1>
 
         <div class="box-container">
             <div class="box">
