--- a/index.html
+++ b/index.html
@@ -524,6 +524,31 @@
 
     </section>
 
+    <section class="blogs" id="blogs">
+
+        <h1 class="heading">our daily posts</h1>
+
+        <div class="blogs-slider">
+
+            <div class="wrapper">
+
+                <div class="slide">
+                    <img src="images/img-1.jpg" alt=""/>
+                    <div class="icons">
+                        <a href=""> <i class="fas fa-calendar"></i> 21st may, 2021</a>
+                        <a href=""> <i class="fas fa-user"></i> by admin</a>
+                    </div>
+                    <h3>blog title goes here</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate quos dignissimos.</p>
+                    <a href="#" class="btn">read more</a>
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 
 </body>
