--- a/index.html
+++ b/index.html
@@ -391,7 +391,8 @@
                 <div class="slide swiper-slide">
                     <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                         incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                        ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
+                        ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.
+                    </p>
                     <div class="user">
                         <img src="images/pic-1.png" alt="" />
                         <div class="info">
@@ -404,7 +405,8 @@
                 <div class="slide swiper-slide">
                     <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                         incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                        ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
+                        ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.
+                    </p>
                     <div class="user">
                         <img src="images/pic-2.png" alt="" />
                         <div class="info">
@@ -431,7 +433,8 @@
                 <div class="slide swiper-slide">
                     <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                         incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                        ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</div>
+                        ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.
+                    </div>
                     <div class="user">
                         <img src="images/pic-4.png" alt="" />
                         <div class="info">
@@ -444,7 +447,8 @@
                 <div class="slide swiper-slide">
                     <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                         incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                        ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
+                        ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.
+                    </p>
                     <div class="user">
                         <img src="images/pic-5.png" alt="" />
                         <div class="info">
@@ -457,7 +461,8 @@
                 <div class="slide swiper-slide">
                     <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                         incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                        ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
+                        ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.
+                    </p>
                     <div class="user">
                         <img src="images/pic-6.png" alt="" />
                         <div class="info">
@@ -528,25 +533,105 @@
 
         <h1 class="heading">our daily posts</h1>
 
-        <div class="blogs-slider">
+        <div class="swiper blogs-slider">
 
-            <div class="wrapper">
+            <div class="swiper-wrapper">
 
-                <div class="slide">
-                    <img src="images/img-1.jpg" alt=""/>
+                <div class="swiper-slide slide">
+                    <img src="images/img-1.jpg" alt="" />
                     <div class="icons">
                         <a href=""> <i class="fas fa-calendar"></i> 21st may, 2021</a>
                         <a href=""> <i class="fas fa-user"></i> by admin</a>
                     </div>
-                    <h3>blog title goes here</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate quos dignissimos.</p>
-                    <a href="#" class="btn">read more</a>
+                    <div class="content">
+                        <h3>blog title goes here</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate quos dignissimos.</p>
+                        <a href="#" class="btn">read more</a>
+                    </div>
+                </div>
+
+                <div class="swiper-slide slide">
+                    <img src="images/img-2.jpg" alt="" />
+                    <div class="icons">
+                        <a href=""> <i class="fas fa-calendar"></i> 21st may, 2021</a>
+                        <a href=""> <i class="fas fa-user"></i> by admin</a>
+                    </div>
+                    <div class="content">
+                        <h3>blog title goes here</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate quos dignissimos.</p>
+                        <a href="#" class="btn">read more</a>
+                    </div>
+                </div>
+
+                <div class="swiper-slide slide">
+                    <img src="images/img-3.jpg" alt="" />
+                    <div class="icons">
+                        <a href=""> <i class="fas fa-calendar"></i> 21st may, 2021</a>
+                        <a href=""> <i class="fas fa-user"></i> by admin</a>
+                    </div>
+                    <div class="content">
+                        <h3>blog title goes here</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate quos dignissimos.</p>
+                        <a href="#" class="btn">read more</a>
+                    </div>
+                </div>
+
+                <div class="swiper-slide slide">
+                    <img src="images/img-4.jpg" alt="" />
+                    <div class="icons">
+                        <a href=""> <i class="fas fa-calendar"></i> 21st may, 2021</a>
+                        <a href=""> <i class="fas fa-user"></i> by admin</a>
+                    </div>
+                    <div class="content">
+                        <h3>blog title goes here</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate quos dignissimos.</p>
+                        <a href="#" class="btn">read more</a>
+                    </div>
+                </div>
+
+                <div class="swiper-slide slide">
+                    <img src="images/img-5.jpg" alt="" />
+                    <div class="icons">
+                        <a href=""> <i class="fas fa-calendar"></i> 21st may, 2021</a>
+                        <a href=""> <i class="fas fa-user"></i> by admin</a>
+                    </div>
+                    <div class="content">
+                        <h3>blog title goes here</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate quos dignissimos.</p>
+                        <a href="#" class="btn">read more</a>
+                    </div>
+                </div>
+
+                <div class="swiper-slide slide">
+                    <img src="images/img-6.jpg" alt="" />
+                    <div class="icons">
+                        <a href=""> <i class="fas fa-calendar"></i> 21st may, 2021</a>
+                        <a href=""> <i class="fas fa-user"></i> by admin</a>
+                    </div>
+                    <div class="content">
+                        <h3>blog title goes here</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate quos dignissimos.</p>
+                        <a href="#" class="btn">read more</a>
+                    </div>
                 </div>
 
             </div>
 
         </div>
 
+    </section>
+
+    <section class="newsletter">
+        <h1 class="heading">newsletter</h1>
+        <div class="content">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc aliquam lobortis iaculis. Ut pulvinar
+                aliquam eros, sed vulputate sapien varius eu. Donec fringilla diam nec dolor hendrerit, eget volutpat
+                eros fermentum. Phasellus ut venenatis sapien.</p>
+            <form action="">
+                <input type="email" name="" placeholder="digite seu email" id="" class="email" />
+                <input type="submit" value="subscribe" class="btn" />
+            </form>
+        </div>
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
